<resources>
    <string name="app_name">SWAP</string>
    <string name="title">Title</string>
    <string name="episode_id">episode</string>
    <string name="opening_crawl">opening crawl</string>
    <string name="release_date">release date</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_people">people</string>
    <string name="drawer_planets">planets</string>
    <string name="drawer_item_films">films</string>
    <string name="drawer_item_species">species</string>
    <string name="drawer_item_vehicles">vehicles</string>
    <string name="OPEN_STARSHIPS">starships</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="action_logout">Logout</string>
    <string name="name">name</string>
    <string name="height">height</string>
    <string name="mass">mass</string>
    <string name="hair_color">hair_color</string>
    <string name="skin_color">skin_color</string>

    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>


</resources>
