<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/llItemContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/planet_name"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:text="@string/name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="serif"
        tools:text="title"/>

    <TextView
        android:id="@+id/rotation_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/orbital_period"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:text="@string/mass"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/diameter_planet"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:text="@string/hair_color"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="serif"/>

</LinearLayout>